--- a/3d-custom/tshirt-sizingtest.html
+++ b/3d-custom/tshirt-sizingtest.html
@@ -214,6 +214,165 @@
       color: #f44336;
       font-size: 30px;
     }
+
+    /* Share Modal Styles */
+    .share-modal-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 10000;
+      backdrop-filter: blur(5px);
+    }
+
+    .share-modal {
+      background: white;
+      border-radius: 15px;
+      box-shadow: 0 10px 50px rgba(0, 0, 0, 0.3);
+      max-width: 600px;
+      width: 90%;
+      max-height: 90vh;
+      overflow-y: auto;
+      animation: fadeInScale 0.3s ease-out;
+    }
+
+    .share-modal-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 30px 15px;
+      border-bottom: 1px solid #eee;
+    }
+
+    .share-modal-header h3 {
+      margin: 0;
+      color: #4CAF50;
+      font-size: 20px;
+    }
+
+    .share-modal-close {
+      background: none;
+      border: none;
+      font-size: 24px;
+      cursor: pointer;
+      color: #666;
+      padding: 0;
+      width: 30px;
+      height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      transition: all 0.2s;
+    }
+
+    .share-modal-close:hover {
+      background: #f5f5f5;
+      color: #333;
+    }
+
+    .share-modal-content {
+      padding: 20px 30px 30px;
+    }
+
+    .share-link-container {
+      background: white;
+      padding: 12px;
+      border: 2px solid #e0e0e0;
+      border-radius: 8px;
+      margin: 15px 0;
+      word-break: break-all;
+      font-family: monospace;
+      font-size: 12px;
+      max-height: 100px;
+      overflow-y: auto;
+    }
+
+    .share-link-container a {
+      color: #2196F3;
+      text-decoration: none;
+    }
+
+    .share-link-container a:hover {
+      text-decoration: underline;
+    }
+
+    .share-buttons {
+      display: flex;
+      gap: 10px;
+      margin: 20px 0;
+      flex-wrap: wrap;
+    }
+
+    .share-button {
+      padding: 12px 20px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: 500;
+      transition: all 0.2s;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      text-decoration: none;
+      color: white;
+    }
+
+    .share-button.copy {
+      background: #4CAF50;
+    }
+
+    .share-button.copy:hover {
+      background: #45a049;
+    }
+
+    .share-button.open {
+      background: #2196F3;
+    }
+
+    .share-button.open:hover {
+      background: #1976D2;
+    }
+
+    .share-button.facebook {
+      background: #1877F2;
+    }
+
+    .share-button.facebook:hover {
+      background: #166FE5;
+    }
+
+    .share-button.instagram {
+      background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    }
+
+    .share-button.instagram:hover {
+      background: linear-gradient(45deg, #e08429 0%, #d55c32 25%, #c91d39 50%, #b8195c 75%, #a8147e 100%);
+    }
+
+    .share-button.zalo {
+      background: #0068FF;
+    }
+
+    .share-button.zalo:hover {
+      background: #0056D6;
+    }
+
+    .share-modal-note {
+      font-size: 12px;
+      color: #666;
+      margin-top: 15px;
+      padding: 10px;
+      background: #f8f9fa;
+      border-radius: 5px;
+      border-left: 4px solid #4CAF50;
+    }
   </style>
 
 </head>
@@ -434,7 +593,186 @@
     </div>
   </div>
 
+  <!-- Share Modal -->
+  <div class="share-modal-overlay" id="shareModalOverlay" style="display: none;">
+    <div class="share-modal">
+      <div class="share-modal-header">
+        <h3>🎉 Thiết kế đã được lưu thành công!</h3>
+        <button class="share-modal-close" onclick="closeShareModal()">×</button>
+      </div>
+      <div class="share-modal-content" id="shareModalBody">
+        <!-- Content will be dynamically populated -->
+      </div>
+    </div>
+  </div>
 
+  <!-- User Info Modal -->
+  <div class="user-info-modal-overlay" id="userInfoModalOverlay" style="display: none;">
+    <div class="user-info-modal">
+      <div class="user-info-modal-header">
+        <h3>📝 Thông tin mua hàng</h3>
+        <button class="user-info-modal-close" onclick="closeUserInfoModal()">×</button>
+      </div>
+      <div class="user-info-modal-content">
+        <form id="userInfoForm">
+          <div class="form-group">
+            <label for="fullName">Họ và tên *</label>
+            <input type="text" id="fullName" name="fullName" required>
+          </div>
+
+          <div class="form-group">
+            <label for="phone">Số điện thoại *</label>
+            <input type="tel" id="phone" name="phone" required>
+          </div>
+
+          <div class="form-group">
+            <label for="email">Email *</label>
+            <input type="email" id="email" name="email" required>
+          </div>
+
+          <div class="form-group">
+            <label for="province">Tỉnh/Thành phố *</label>
+            <select id="province" name="province" required>
+              <option value="">Chọn tỉnh/thành phố</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label for="district">Quận/Huyện *</label>
+            <select id="district" name="district" required disabled>
+              <option value="">Chọn quận/huyện</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label for="ward">Phường/Xã *</label>
+            <select id="ward" name="ward" required disabled>
+              <option value="">Chọn phường/xã</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label for="address">Địa chỉ chi tiết *</label>
+            <textarea id="address" name="address" rows="3" placeholder="Số nhà, tên đường..." required></textarea>
+          </div>
+
+          <div class="form-group">
+            <label for="note">Ghi chú</label>
+            <textarea id="note" name="note" rows="2" placeholder="Ghi chú thêm (tùy chọn)"></textarea>
+          </div>
+
+          <div class="form-actions">
+            <button type="button" onclick="closeUserInfoModal()" class="btn-cancel">Hủy</button>
+            <button type="submit" class="btn-submit">Mua ngay</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+
+
+  <script>
+    // Share Modal Functions
+    function showShareModal(shareableLink) {
+      const overlay = document.getElementById('shareModalOverlay');
+      const modalBody = document.getElementById('shareModalBody');
+
+      const shareTitle = 'Xem thiết kế 3D tuyệt vời của tôi!';
+      const shareDescription = 'Tôi vừa tạo một thiết kế 3D tuyệt vời trên InkMe. Hãy xem và tạo thiết kế riêng của bạn!';
+
+      modalBody.innerHTML = `
+        <p><strong>Link chia sẻ của bạn:</strong></p>
+        <div class="share-link-container">
+          <a href="${shareableLink}" target="_blank" id="shareLink">
+            ${shareableLink}
+          </a>
+        </div>
+        
+        <div class="share-buttons">
+          <button class="share-button copy" onclick="copyShareLink('${shareableLink}')">
+            📋 Copy Link
+          </button>
+          <button class="share-button open" onclick="openShareLink('${shareableLink}')">
+            🔗 Mở Link
+          </button>
+          <a href="https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(shareableLink)}" 
+             target="_blank" class="share-button facebook">
+            📘 Facebook
+          </a>
+          <a href="https://www.instagram.com/" 
+             target="_blank" class="share-button instagram" 
+             onclick="copyShareLink('${shareableLink}'); alert('Link đã copy! Hãy paste vào Instagram Story hoặc Post của bạn.');">
+            📸 Instagram
+          </a>
+          <a href="https://zalo.me/pc" 
+             target="_blank" class="share-button zalo"
+             onclick="copyShareLink('${shareableLink}'); alert('Link đã copy! Hãy paste vào Zalo để chia sẻ.');">
+            💬 Zalo
+          </a>
+        </div>
+        
+        <div class="share-modal-note">
+          💡 Chia sẻ link này để người khác có thể xem thiết kế 3D của bạn!
+        </div>
+      `;
+
+      overlay.style.display = 'flex';
+
+      // Add click outside to close
+      overlay.onclick = function (e) {
+        if (e.target === overlay) {
+          closeShareModal();
+        }
+      };
+    }
+
+    function closeShareModal() {
+      const overlay = document.getElementById('shareModalOverlay');
+      overlay.style.display = 'none';
+      overlay.onclick = null;
+    }
+
+    function copyShareLink(link) {
+      navigator.clipboard.writeText(link).then(() => {
+        // Show success feedback
+        const copyBtn = event.target;
+        const originalText = copyBtn.innerHTML;
+        copyBtn.innerHTML = '✅ Đã copy!';
+        copyBtn.style.background = '#4CAF50';
+
+        setTimeout(() => {
+          copyBtn.innerHTML = originalText;
+          copyBtn.style.background = '#4CAF50';
+        }, 2000);
+      }).catch(err => {
+        console.error('Could not copy text: ', err);
+        // Fallback for older browsers
+        const textArea = document.createElement('textarea');
+        textArea.value = link;
+        document.body.appendChild(textArea);
+        textArea.select();
+        try {
+          document.execCommand('copy');
+          alert('✅ Link đã được copy!');
+        } catch (err) {
+          alert('❌ Không thể copy link');
+        }
+        document.body.removeChild(textArea);
+      });
+    }
+
+    function openShareLink(link) {
+      window.open(link, '_blank');
+    }
+
+    // Add keyboard support
+    document.addEventListener('keydown', function (e) {
+      if (e.key === 'Escape') {
+        closeShareModal();
+      }
+    });
+  </script>
 
 </body>
 
