--- a/3d-custom/index.html
+++ b/3d-custom/index.html
@@ -40,6 +40,21 @@
   <link href="https://refreshless.com//nouislider/dist/nouislider.css?v=1550" rel="stylesheet" />
   <link rel="stylesheet" href="css/index.css" />
 
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://inkme3d.com/" />
+  <meta property="og:title" content="InkMe - Dịch vụ in ấn chuyên nghiệp" />
+  <meta property="og:description" content="InkMe - Dịch vụ in ấn chuyên nghiệp, tùy chỉnh 3D online. In áo thun, hoodie, túi xách theo yêu cầu với chất lượng cao và giá cả phù hợp." />
+  <meta property="og:image" content="https://res.cloudinary.com/dz1i9npra/image/upload/v1752036274/inkme_thumbnail_fcz9ia.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:site_name" content="InkMe" />
+  <meta property="og:locale" content="vi_VN" />
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://inkme3d.com/" />
+  <meta property="twitter:title" content="InkMe - Dịch vụ in ấn chuyên nghiệp" />
+  <meta property="twitter:description" content="InkMe - Dịch vụ in ấn chuyên nghiệp, tùy chỉnh 3D online. In áo thun, hoodie, túi xách theo yêu cầu với chất lượng cao và giá cả phù hợp." />
+  <meta property="twitter:image" content="https://res.cloudinary.com/dz1i9npra/image/upload/v1752036274/inkme_thumbnail_fcz9ia.png" />
+
 </head>
 
 <body class="body">
