--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7ZCPCVX6F7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-7ZCPCVX6F7');
+  </script>
+
   <meta charset="utf-8" />
   <link rel="icon" href="/inkme-logo-gradient.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,7 +26,8 @@
   <meta property="og:title" content="InkMe - Dịch vụ in ấn chuyên nghiệp" />
   <meta property="og:description"
     content="InkMe - Dịch vụ in ấn chuyên nghiệp, tùy chỉnh 3D online. In áo thun, hoodie, túi xách theo yêu cầu với chất lượng cao và giá cả phù hợp." />
-  <meta property="og:image" content="https://res.cloudinary.com/dz1i9npra/image/upload/v1752036274/inkme_thumbnail_fcz9ia.png" />
+  <meta property="og:image"
+    content="https://res.cloudinary.com/dz1i9npra/image/upload/v1752036274/inkme_thumbnail_fcz9ia.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="InkMe" />
@@ -26,7 +39,8 @@
   <meta property="twitter:title" content="InkMe - Dịch vụ in ấn chuyên nghiệp" />
   <meta property="twitter:description"
     content="InkMe - Dịch vụ in ấn chuyên nghiệp, tùy chỉnh 3D online. In áo thun, hoodie, túi xách theo yêu cầu với chất lượng cao và giá cả phù hợp." />
-  <meta property="twitter:image" content="https://res.cloudinary.com/dz1i9npra/image/upload/v1752036274/inkme_thumbnail_fcz9ia.png" />
+  <meta property="twitter:image"
+    content="https://res.cloudinary.com/dz1i9npra/image/upload/v1752036274/inkme_thumbnail_fcz9ia.png" />
 
   <!-- Additional meta tags -->
   <meta name="author" content="InkMe Team" />
