--- a/3d-custom/index.html
+++ b/3d-custom/index.html
@@ -71,23 +71,23 @@
       <div id="uploaddesignmobile"
         class="div-block-31 uploadbuttonmobile w-node-_2d4ed815-3d72-82ce-ad1f-c26db386ee15-b896bc9b">
         <img src="images/Asset-1111.png" loading="lazy" alt="" class="image-34" />
-        <div class="text-block-30">Upload</div>
+        <div class="text-block-30">Thêm ảnh</div>
       </div>
       <div data-w-id="40ca78e0-b9f7-b7f6-913e-8b048bb22008" class="div-block-31 colorsbuttonmobile">
         <img src="images/Asset-2111.png" loading="lazy" alt="" class="image-34" />
-        <div class="text-block-30">Colors</div>
+        <div class="text-block-30">Đổi màu</div>
       </div>
-      <div data-w-id="6317f5cf-1a97-fbaf-26b7-3d884f8d2edd" class="div-block-31 animationbuttonmobile">
+      <!-- <div data-w-id="6317f5cf-1a97-fbaf-26b7-3d884f8d2edd" class="div-block-31 animationbuttonmobile">
         <img src="images/Asset-3111.png" loading="lazy" alt="" class="image-34" />
         <div class="text-block-30">Animation</div>
-      </div>
+      </div> -->
       <div data-w-id="11c67537-9805-bc1a-dafe-73d7ac6db009" class="div-block-31 effectsbuttonmobile">
         <img src="images/sparkle.png" loading="lazy" alt="" class="image-34" />
-        <div class="text-block-30">Effects</div>
+        <div class="text-block-30">Hiệu ứng</div>
       </div>
       <div data-w-id="c522c4a3-2df6-f91a-0e62-151f1e0b8efe" class="div-block-31 exportbuttonmobile">
         <img src="images/Asset-4111.png" loading="lazy" alt="" class="image-34" />
-        <div class="text-block-30">Export</div>
+        <div class="text-block-30">Xuất thiết kế</div>
       </div>
     </div>
   </div>
