--- a/3d-custom/tshirt-sizingtest.html
+++ b/3d-custom/tshirt-sizingtest.html
@@ -21,12 +21,12 @@
 
   <!-- Search Engines -->
   <meta name="description"
-    content="Interactive 3D Web application made with Verge3D. Immerse yourself in amazing graphics experience offered by state-of-the art WebGL and HTML5 technologies." />
+    content="Tự tay thiết kế và xem trước mẫu áo 3D cực chất với InkMe." />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="InkMe - 3D model" />
   <meta name="twitter:description"
-    content="Interactive 3D Web application made with Verge3D. Immerse yourself in amazing graphics experience offered by state-of-the art WebGL and HTML5 technologies." />
+    content="Tự tay thiết kế và xem trước mẫu áo 3D cực chất với InkMe." />
   <meta name="twitter:image:src" content="https://cdn.soft8soft.com/images/player_socials.jpg" />
   <!-- Open Graph -->
   <meta property="og:title" content="InkMe - 3D model" />
