--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,7 @@
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://inkme3d.com/" />
 
-  <link rel="apple-touch-icon" href="/logo192.png" />
+  <link rel="apple-touch-icon" href="/favicon.svg" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
